--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required(VERSION 2.8)
 list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 add_subdirectory(xat_msgs)
+add_subdirectory(xat_gpsd)
 
 # vim:set ts=2 sw=2 et:
