gpsd: Include generated header.

--- a/xat_gpsd/CMakeLists.txt
+++ b/xat_gpsd/CMakeLists.txt
@@ -9,6 +9,7 @@ include(EnableCXX11)
 
 include_directories(
   include
+  ${CMAKE_BINARY_DIR}/include
   ${Boost_INCLUDE_DIRS}
   ${LCM_INCLUDE_DIRS}
 )
