--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ install:
 - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get -qq update
 - sudo sudo apt-get -qq install g++-4.8
-- export CXX="g++-4.8"
+- export CXX="g++-4.8" CC="gcc-4.8"
 # LCM binary (precompiled by me)
-- wget http://multivax.dlhq.org/packages/x-at/ci-binaries/$LCM_DEB
+- wget $CI_BINARIES_PATH/$LCM_DEB
 - sudo dpkg -i $LCM_DEB
 # MAVLink headers (packaged c_library repo)
-- wget http://multivax.dlhq.org/packages/x-at/ci-binaries/$MAVLINK_DEB
+- wget $CI_BINARIES_PATH/$MAVLINK_DEB
 - sudo dpkg -i $MAVLINK_DEB
 # console-bridge
 - sudo apt-get -qq install libboost-all-dev
