--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,9 @@ script:
 - mkdir -p build
 - cd build && cmake ..
 - make
+notifications:
+  webhooks:
+    urls: [https://webhooks.gitter.im/e/2f6114466e43864c1481]
+    on_success: change
+    on_failure: always
+    on_start: false
