--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ script:
 - make
 notifications:
   webhooks:
-    urls: [https://webhooks.gitter.im/e/2f6114466e43864c1481]
+    urls:
+    - https://webhooks.gitter.im/e/2f6114466e43864c1481
     on_success: change
     on_failure: always
     on_start: false
