Add common header place

--- a/xat_gpsd/CMakeLists.txt
+++ b/xat_gpsd/CMakeLists.txt
@@ -11,6 +11,7 @@ pkg_check_modules(libgps REQUIRED libgps)
 include(EnableCXX11)
 
 include_directories(
+  ${CMAKE_SOURCE_DIR}/include
   ${CMAKE_BINARY_DIR}/include
   ${Boost_INCLUDE_DIRS}
   ${console_bridge_INCLUDE_DIRS}
