--- a/xat_rotd/CMakeLists.txt
+++ b/xat_rotd/CMakeLists.txt
@@ -12,6 +12,7 @@ include(EnableCXX11)
 
 include_directories(
   include
+  ${CMAKE_SOURCE_DIR}/include
   ${CMAKE_BINARY_DIR}/include
   ${Boost_INCLUDE_DIRS}
   ${console_bridge_INCLUDE_DIRS}
