--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
 # GCC 4.8 for proper C++11
 - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get -qq update
-- sudo sudo apt-get -qq install g++-4.8
+- sudo apt-get -qq install g++-4.8
 - export CXX="g++-4.8" CC="gcc-4.8"
 # LCM binary (precompiled by me)
 - wget $CI_BINARIES_PATH/$LCM_DEB
@@ -22,6 +22,8 @@ install:
 # gpsd and libudev
 - sudo apt-get -qq install libgps-dev libudev-dev
 # valac
+- sudo add-apt-repository -y ppa:vala-team/ppa
+- sudo apt-get -qq update
 - sudo apt-get -qq install valac
 script:
 - mkdir -p build
