--- a/xat_rotd_vala/CMakeLists.txt
+++ b/xat_rotd_vala/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(PkgConfig)
 find_package(LCM REQUIRED)
 find_package(Vala REQUIRED)
 pkg_check_modules(libudev REQUIRED libudev)
+pkg_check_modules(glib2 REQUIRED glib-2.0)
 
 include(UseVala)
 
@@ -24,6 +25,7 @@ include_directories(
   ../xat_rotd/include
   ${LCM_INCLUDE_DIRS}
   ${libudev_INCLUDE_DIRS}
+  ${glib2_INCLUDE_DIRS}
 )
 
 add_library(hidapi-hidraw
@@ -39,6 +41,7 @@ add_executable(xat_rotd_vala
 target_link_libraries(xat_rotd_vala
   hidapi-hidraw
   ${LCM_LIBRARIES}
+  ${glib2_INCLUDE_DIRS}
 )
 
 install(TARGETS xat_rotd_vala hidapi-hidraw
