hidapi: Move to subdir. Build as static library.

--- a/xat_rotd/CMakeLists.txt
+++ b/xat_rotd/CMakeLists.txt
@@ -22,10 +22,10 @@ include_directories(
 
 add_executable(xat_rotd
   src/xat_rotd.cpp
-  src/hid-hidraw.c
   src/hid_conn.cpp
 )
 target_link_libraries(xat_rotd
+  hidapi-hidraw
   ${Boost_LIBRARIES}
   ${console_bridge_LIBRARIES}
   ${LCM_LIBRARIES}
