travis: fix include path to hidapi

--- a/xat_rotd_vala/CMakeLists.txt
+++ b/xat_rotd_vala/CMakeLists.txt
@@ -25,6 +25,7 @@ OPTIONS
 
 include_directories(
   ${CMAKE_BINARY_DIR}/include
+  ${CMAKE_SOURCE_DIR}/hidapi/include
   ${LCM_INCLUDE_DIRS}
   ${libudev_INCLUDE_DIRS}
   ${gobject2_INCLUDE_DIRS}
