rotd: remove c++ implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 add_subdirectory(hidapi)
 add_subdirectory(xat_msgs)
 add_subdirectory(xat_gpsd)
-add_subdirectory(xat_rotd)
+#add_subdirectory(xat_rotd)
 add_subdirectory(xat_scripts)
 add_subdirectory(xat_rotd_vala)
 
