--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,17 @@
-language: cpp
+language: c
 compiler:
 - gcc
 install:
-# GCC 4.8 for proper C++11
-- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+# valac, gpsd, libudev
+- sudo add-apt-repository -y ppa:vala-team/ppa
 - sudo apt-get -qq update
-- sudo apt-get -qq install g++-4.8
-- export CXX="g++-4.8" CC="gcc-4.8"
+- sudo apt-get -qq install valac libglib2.0-dev libgps-dev libudev-dev
 # LCM binary (precompiled by me)
 - wget $CI_BINARIES_PATH/$LCM_DEB
 - sudo dpkg -i $LCM_DEB
 # MAVLink headers (packaged c_library repo)
 - wget $CI_BINARIES_PATH/$MAVLINK_DEB
 - sudo dpkg -i $MAVLINK_DEB
-# console-bridge
-- sudo apt-get -qq install libboost-all-dev
-- git clone --depth 1 https://github.com/ros/console_bridge.git
-- cd console_bridge && cmake . && make
-- sudo make install
-- cd ..
-# gpsd and libudev
-- sudo apt-get -qq install libgps-dev libudev-dev
-# valac
-- sudo add-apt-repository -y ppa:vala-team/ppa
-- sudo apt-get -qq update
-- sudo apt-get -qq install valac libglib2.0-dev
 script:
 - mkdir -p build
 - cd build && cmake ..
