rename mavconn file

--- a/xat_mavlinkd/CMakeLists.txt
+++ b/xat_mavlinkd/CMakeLists.txt
@@ -13,7 +13,7 @@ include(UseVala)
 
 vala_precompile(VALA_C
   src/mavlinkd.vala
-  src/transport.vala
+  src/mavconn.vala
 PACKAGES
   gio-2.0
   mavlink
