scripts: disable install

--- a/xat_scripts/CMakeLists.txt
+++ b/xat_scripts/CMakeLists.txt
@@ -6,6 +6,6 @@ find_package(LCM REQUIRED)
 
 file(GLOB SCRIPTS ${PROJECT_SOURCE_DIR}/scripts/*.lua)
 
-install(FILES ${SCRIPTS} DESTINATION bin)
+#install(FILES ${SCRIPTS} DESTINATION bin)
 
 # vim:set ts=2 sw=2 et:
